Update: fixed dependencies